gcc/testsuite/g++.dg/modules/p0713-1.C
module;
module; // { dg-error "expected" }
